; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge.c_suggest_conflicts.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge.c_suggest_conflicts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@the_repository = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@the_index = common dso_local global i32 0, align 4
@cleanup_arg = common dso_local global i32 0, align 4
@allow_rerere_auto = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [67 x i8] c"Automatic merge failed; fix conflicts and then commit the result.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @suggest_conflicts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @suggest_conflicts() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.strbuf, align 4
  %4 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %5 = load i32, i32* @the_repository, align 4
  %6 = call i8* @git_path_merge_msg(i32 %5)
  store i8* %6, i8** %1, align 8
  %7 = load i8*, i8** %1, align 8
  %8 = call i32* @xfopen(i8* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %2, align 8
  %9 = load i32, i32* @cleanup_arg, align 4
  %10 = call i32 @get_cleanup_mode(i32 %9, i32 1)
  %11 = call i32 @append_conflicts_hint(i32* @the_index, %struct.strbuf* %3, i32 %10)
  %12 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @fputs(i32 %13, i32* %14)
  %16 = call i32 @strbuf_release(%struct.strbuf* %3)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @fclose(i32* %17)
  %19 = load i32, i32* @the_repository, align 4
  %20 = load i32, i32* @allow_rerere_auto, align 4
  %21 = call i32 @repo_rerere(i32 %19, i32 %20)
  %22 = call i8* @_(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.1, i64 0, i64 0))
  %23 = call i32 @printf(i8* %22)
  ret i32 1
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @git_path_merge_msg(i32) #2

declare dso_local i32* @xfopen(i8*, i8*) #2

declare dso_local i32 @append_conflicts_hint(i32*, %struct.strbuf*, i32) #2

declare dso_local i32 @get_cleanup_mode(i32, i32) #2

declare dso_local i32 @fputs(i32, i32*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2

declare dso_local i32 @fclose(i32*) #2

declare dso_local i32 @repo_rerere(i32, i32) #2

declare dso_local i32 @printf(i8*) #2

declare dso_local i8* @_(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
